crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"`Hello, world`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..14,
                expr: Expr {
                    span: 0..14,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [],
                            quasis: [
                                TemplateElem {
                                    span: 1..13,
                                    raw: Str(
                                        Str {
                                            span: 1..13,
                                            value: "Hello, world",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 1..13,
                                            value: "Hello, world",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
