crates/crochet_parser/src/snapshots/crochet_parser__tests__top_level_expressions-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"123;\\n\\\"hello\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..4,
                expr: Expr {
                    span: 0..3,
                    kind: Lit(
                        Num(
                            Num {
                                span: 0..3,
                                value: "123",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            },
            Expr {
                span: 5..13,
                expr: Expr {
                    span: 5..12,
                    kind: Lit(
                        Str(
                            Str {
                                span: 5..12,
                                value: "hello",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
