crates/crochet_parser/src/snapshots/crochet_parser__tests__type_decls-8.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"type Foo = typeof foo;\")"
---
Ok(
    Program {
        body: [
            TypeDecl {
                span: 0..22,
                declare: false,
                id: Ident {
                    span: 5..8,
                    name: "Foo",
                },
                type_ann: TypeAnn {
                    kind: Query(
                        QueryType {
                            span: 11..21,
                            expr: Expr {
                                span: 18..21,
                                kind: Ident(
                                    Ident {
                                        span: 18..21,
                                        name: "foo",
                                    },
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    span: 11..21,
                    inferred_type: None,
                },
                type_params: None,
            },
        ],
    },
)
