crates/crochet_parser/src/snapshots/crochet_parser__tests__type_decls.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"type Num = number;\")"
---
Ok(
    Program {
        body: [
            TypeDecl {
                span: 0..18,
                declare: false,
                id: Ident {
                    span: 5..8,
                    name: "Num",
                },
                type_ann: TypeAnn {
                    kind: Keyword(
                        KeywordType {
                            span: 11..17,
                            keyword: Number,
                        },
                    ),
                    span: 11..17,
                    inferred_type: None,
                },
                type_params: None,
            },
        ],
    },
)
