crates/crochet_parser/src/snapshots/crochet_parser__tests__types-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"declare let get_bar: (foo: Foo) => T\")"
---
Program {
    body: [
        VarDecl {
            span: 0..36,
            pattern: Ident(
                BindingIdent {
                    span: 12..19,
                    id: Ident {
                        span: 12..19,
                        name: "get_bar",
                    },
                    type_ann: Some(
                        Lam(
                            LamType {
                                span: 21..36,
                                params: [
                                    Ident(
                                        BindingIdent {
                                            span: 22..30,
                                            id: Ident {
                                                span: 22..25,
                                                name: "foo",
                                            },
                                            type_ann: Some(
                                                TypeRef(
                                                    TypeRef {
                                                        span: 27..30,
                                                        name: "Foo",
                                                        type_params: None,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ],
                                ret: TypeRef(
                                    TypeRef {
                                        span: 35..36,
                                        name: "T",
                                        type_params: None,
                                    },
                                ),
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
            init: None,
            declare: true,
        },
    ],
}
