crates/crochet_parser/src/snapshots/crochet_parser__tests__types-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"declare let add: ((a: number, b: number) => number) & (a: string, b: string) => string;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 8..87,
                pattern: Pattern {
                    span: 12..15,
                    kind: Ident(
                        BindingIdent {
                            name: "add",
                            mutable: false,
                            span: 12..15,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Intersection(
                            IntersectionType {
                                span: 17..86,
                                types: [
                                    TypeAnn {
                                        kind: Lam(
                                            LamType {
                                                span: 18..50,
                                                params: [
                                                    TypeAnnFnParam {
                                                        pat: Pattern {
                                                            span: 19..20,
                                                            kind: Ident(
                                                                BindingIdent {
                                                                    name: "a",
                                                                    mutable: false,
                                                                    span: 19..20,
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        type_ann: TypeAnn {
                                                            kind: Keyword(
                                                                KeywordType {
                                                                    span: 22..28,
                                                                    keyword: Number,
                                                                },
                                                            ),
                                                            span: 22..28,
                                                            inferred_type: None,
                                                        },
                                                        optional: false,
                                                    },
                                                    TypeAnnFnParam {
                                                        pat: Pattern {
                                                            span: 30..31,
                                                            kind: Ident(
                                                                BindingIdent {
                                                                    name: "b",
                                                                    mutable: false,
                                                                    span: 30..31,
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        type_ann: TypeAnn {
                                                            kind: Keyword(
                                                                KeywordType {
                                                                    span: 33..39,
                                                                    keyword: Number,
                                                                },
                                                            ),
                                                            span: 33..39,
                                                            inferred_type: None,
                                                        },
                                                        optional: false,
                                                    },
                                                ],
                                                ret: TypeAnn {
                                                    kind: Keyword(
                                                        KeywordType {
                                                            span: 44..50,
                                                            keyword: Number,
                                                        },
                                                    ),
                                                    span: 44..50,
                                                    inferred_type: None,
                                                },
                                                type_params: None,
                                            },
                                        ),
                                        span: 18..50,
                                        inferred_type: None,
                                    },
                                    TypeAnn {
                                        kind: Lam(
                                            LamType {
                                                span: 54..86,
                                                params: [
                                                    TypeAnnFnParam {
                                                        pat: Pattern {
                                                            span: 55..56,
                                                            kind: Ident(
                                                                BindingIdent {
                                                                    name: "a",
                                                                    mutable: false,
                                                                    span: 55..56,
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        type_ann: TypeAnn {
                                                            kind: Keyword(
                                                                KeywordType {
                                                                    span: 58..64,
                                                                    keyword: String,
                                                                },
                                                            ),
                                                            span: 58..64,
                                                            inferred_type: None,
                                                        },
                                                        optional: false,
                                                    },
                                                    TypeAnnFnParam {
                                                        pat: Pattern {
                                                            span: 66..67,
                                                            kind: Ident(
                                                                BindingIdent {
                                                                    name: "b",
                                                                    mutable: false,
                                                                    span: 66..67,
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        type_ann: TypeAnn {
                                                            kind: Keyword(
                                                                KeywordType {
                                                                    span: 69..75,
                                                                    keyword: String,
                                                                },
                                                            ),
                                                            span: 69..75,
                                                            inferred_type: None,
                                                        },
                                                        optional: false,
                                                    },
                                                ],
                                                ret: TypeAnn {
                                                    kind: Keyword(
                                                        KeywordType {
                                                            span: 80..86,
                                                            keyword: String,
                                                        },
                                                    ),
                                                    span: 80..86,
                                                    inferred_type: None,
                                                },
                                                type_params: None,
                                            },
                                        ),
                                        span: 54..86,
                                        inferred_type: None,
                                    },
                                ],
                            },
                        ),
                        span: 17..86,
                        inferred_type: None,
                    },
                ),
                init: None,
                declare: true,
            },
        ],
    },
)
